--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 .DS_Store
+.firebase
 dist/
 node_modules/
 src/firebase/init.js
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+updater/serviceAccount.json
 
 # Editor directories and files
 .idea
